# mneme-memory-mcp

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: agent-mesh.md  always-on-memory.md  artwork.md  hermes.md  ponytail.md
examples/: claude-windows.json  claude.json  codex-config-windows.toml  codex-config.toml  sessionstart-hermes-memory.sh
scripts/: install.ps1  install.sh
src/caduceus_memory_mcp/: __init__.py  server.py  store.py
src/mneme_memory_mcp/: __init__.py  bridge.py  capture.py  cli.py  continuity.py  doctor.py  env_launcher.py  hook_context.py  server.py  store.py
tests/: test_bridge.py  test_capture.py  test_cli.py  test_continuity.py  test_env_launcher.py  test_hygiene.py  test_store.py
