[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "caduceus-memory-mcp"
version = "0.1.0"
description = "A local MCP memory bridge for Claude, Codex, Hermes, and other agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Zach / ethos-zero" }
]
keywords = ["mcp", "memory", "claude", "codex", "hermes", "agents"]
dependencies = [
  "mcp>=1.8"
]

[project.scripts]
caduceus-memory-mcp = "caduceus_memory_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/caduceus_memory_mcp"]

