[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mneme-memory-mcp"
version = "0.3.0"
description = "A local MCP memory and agent-mesh bridge for Claude, Codex, Hermes, and other agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Zach / ethos-zero" }
]
keywords = ["mcp", "memory", "claude", "codex", "hermes", "agents"]
dependencies = [
  "mcp>=1.8"
]

[project.scripts]
mneme-memory = "mneme_memory_mcp.cli:main"
mneme-memory-continuity = "mneme_memory_mcp.continuity:main"
mneme-memory-mcp = "mneme_memory_mcp.server:main"
mneme-memory-doctor = "mneme_memory_mcp.doctor:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mneme_memory_mcp"]
